--- a/Lynx/appsettings.json
+++ b/Lynx/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.; Initial Catalog=Lynx; Integrated Security=true; Max Pool Size=1000; Min Pool Size=12; Pooling=True;"
+    "DefaultConnectionsql": "Data Source=.; Initial Catalog=Lynx; Integrated Security=true; Max Pool Size=1000; Min Pool Size=12; Pooling=True;",
+    "DefaultConnection": "Host=127.0.0.1;Database=Lynx;Username=postgres;Password=bootcamp"
   },
   "Logging": {
     "LogLevel": {
