--- a/Lynx.Api.Model/Lynx.Api.Models.csproj
+++ b/Lynx.Api.Model/Lynx.Api.Models.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lynx.Enum\Lynx.Enum.csproj" />
+  </ItemGroup>
+
 </Project>
