--- a/Lynx.Api.Model/Lynx.Api.Models.csproj
+++ b/Lynx.Api.Model/Lynx.Api.Models.csproj
@@ -1,11 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Lynx.Enum\Lynx.Enum.csproj" />
   </ItemGroup>
-
 </Project>
