--- a/Lynx.Data.Model/Lynx.Data.Models.csproj
+++ b/Lynx.Data.Model/Lynx.Data.Models.csproj
@@ -1,12 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Lynx.Api.Common\Lynx.Api.Common.csproj" />
     <ProjectReference Include="..\Lynx.Enum\Lynx.Enum.csproj" />
   </ItemGroup>
-
 </Project>
